--- a/Day07.html
+++ b/Day07.html
@@ -14,7 +14,9 @@
     <iframe src="https://www.youtube.com/watch?v=vfKKlZgd_uM"></iframe>
     <iframe src="https://www.youtube.com/embed/vfKKlZgd_uM?si=5ci38Dsruv5tF8lV" allow="fullscreen"></iframe>
     <iframe src="Day06.html"></iframe>
-    <audio src=""></audio>
+    <audio src="Animal Movie Background Music Mp3 Free Ringtone Download - MobCup.Com.Co.mp3"  controls></audio>
+    <!---loop and autoplay--->
+    <video height="250" width="500" src="VID_35121009_045805_645.mp4" controls></video>
 </body>
 
 </style>
