--- a/Day08.html
+++ b/Day08.html
@@ -1,11 +1,18 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Day08</title>
+    <link rel="stylesheet" href="Day08.css">
 </head>
+
 <body>
-    <h1>Day 08</h1>
+    <h1 align="center">Day 08- Intro to JS</h1>
+
 </body>
+<script src="Day08.js">
+</script>
+
 </html>
