--- a/Day09.html
+++ b/Day09.html
@@ -11,5 +11,5 @@
     <h1 align="center">Day 09 - Intro to JS Functions</h1>
 </body>
 
-<script src="day09.js"></script>
+<script src="Day09.js"></script>
 </html>
