--- a/Day13.html
+++ b/Day13.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="Day13.css">
 </head>
 <body>
-    <h1 class="head" align="center">Day 13- Introduction Tom DOM</h1>
+    <h1 class="head" align="center">Day 13- Introduction To DOM</h1>
     <button type="button" onclick="change()"> Click to change</button>
     <h2 id="msg" align="center"></h2>
 </body>
