--- a/Day13.html
+++ b/Day13.html
@@ -3,13 +3,16 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Day 13</title>
     <link rel="stylesheet" href="Day13.css">
+    <title>Day 13 </title>
 </head>
 <body>
-    <h1 class="head" align="center">Day 13- Introduction To DOM</h1>
-    <button type="button" onclick="change()"> Click to change</button>
-    <h2 id="msg" align="center"></h2>
+    <h1 align="center" id="head">Day 13 - Intro to DOM</h1>
+    <button class="btn" type="button" onclick="change()">Click To Change</button>
+    
+    <br>
+    <h3 align="center" id="count"></h3><br>
+    
 </body>
 <script src="Day13.js"></script>
 </html>
