--- a/Day15.html
+++ b/Day15.html
@@ -1,24 +1,26 @@
 <!DOCTYPE html>
 <html lang="en">
-
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>Day-15</title>
     <link rel="stylesheet" href="Day15.css">
-    <title>Day 15</title>
 </head>
-
 <body>
-    <h1 align="center"> Day 15 - Email PassWord Mobile Field Validation </h1>
+    <h1 align="center" >Day  15 - Email, Password, Mobile field Validation</h1>
 
     <center>
-        Username: <input type="email" placeholder="Enter Email" id="mail"><button type="button" onclick="checkemail()">check email</button>
-        <label id="echeck"></label> <br><br>
-        password: <input type="password" placeholder="Enter PassWord" id="pass"> <br><br>
-        <button type="button" onclick="login()">Login</button> <br>
-        <h3 id="msg"></h3>
+    Username : <input id="email" type="email" placeholder="Enter Username or Email" ><button type="button" onclick="checkmail()">Check email</button>
+    <label id="echeck"></label> <br><br>
+    Password : <input id="password" type="password" placeholder="Enter Password" ><button type="button" onclick="checkpass()">Check Password</button>
+    <label id="check"></label> <br><br>
+    Mobile no : <input id="number" type="number" placeholder="Enter Mobile no" ><button type="button" onclick="checkmob()">Check Mobile no</button>
+    <label id="check"></label> <br><br>
+
+    <button type="button" onclick="login()">Login</button>
+    
+    <h3 id="msg"></h3>
     </center>
 </body>
 <script src="Day15.js"></script>
-
 </html>
