--- a/Day16.html
+++ b/Day16.html
@@ -13,7 +13,7 @@
 
     <center>
         <div id="changeimage"><img src="Images/IMG_20230723_124317.jpg"></div> 
-        <button type="button" onclick="changeimg()">Change Image</button>
+        <button type="button" onclick="changeimage()"> Change Image</button>
 
 
     </center>
