--- a/Day16.html
+++ b/Day16.html
@@ -12,8 +12,8 @@
     <h1 align="center"> Day 16 - Changing image through JS</h1>
 
     <center>
-        <div id="changeimage"><img src="Images/IMG_20230723_124317.jpg"></div>
-        <button type="button" onclick="changeimage()"> Change Image</button>
+        <div id="changeimage" ><img src="Images/IMG_20230723_124317.jpg"></div>
+        <button type="button" onclick="changeimg()"> Change Image</button>
 
 
     </center>
